# GK-FunctionGraphInspector3D

./: CMakeLists.txt  README.md
shader/: shader.frag.glsl  shader.vert.glsl
src/: MyApplication.cpp  MyApplication.hpp  Optimizers.hpp  main.cpp  utils.hpp
